# rust-exercises

./: .gitignore
advanced/src/: lib.rs  main.rs
closures-futures-async/: Cargo.toml
closures-futures-async/src/: main.rs
closures-futures-async2/: Cargo.toml
closures-futures-async2/src/: main.rs
concurrency_example/: Cargo.toml
concurrency_example/src/: main.rs
example/: Cargo.toml
example/src/: main.rs
guessing_game/src/: main.rs
hello-rust/src/: main.rs
iterator/src/: lib.rs  main.rs
lifetime/src/: lib.rs
macro_example/: Cargo.toml
macro_example/src/: main.rs
modules/src/: lib.rs  main.rs  mod_c.rs
modules/src/mod_a/: mod_b.rs
ownership_example/src/: main.rs
phrases/src/: lib.rs  main.rs
phrases/src/english/: mod.rs
pin_example/: Cargo.toml
pin_example/src/: main.rs
reactor_executor_example/: Cargo.toml
reactor_executor_example/src/: main.rs
strsplit/src/: lib.rs
trait_example/: Cargo.toml
trait_example/src/: main.rs
trait_example2/: Cargo.toml
trait_example2/src/: main.rs
