[package]
name = "closures-futures-async2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
# https://docs.rs/tokio/1.15.0/tokio/index.html#feature-flags
# tokio = { version = "1.15.0", features = ["full"] }
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
simplelog = "0.7"
rand = "0.7.3"
