[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"

# https://github.com/dtolnay/anyhow
anyhow = "1.0"
# anyhow = { version = "1.0", default-features = false }

serde = "1.0"
serde_yaml = "0.8"

derive_more = "0.99.2"
rand = "0.7"

stacker = "0.1"
num-bigint = "0.4"
num-traits = "0.2"

[dependencies.tokio]
features = ["full", "test-util"]
package = "tokio"
version = "=1.15.0"
