[package]
name = "reactor_executor_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"]}
minimio={git="https://github.com/cfsamson/examples-minimio"}
async-task = "4.0.3"
crossbeam = "0.8.1"
